--- a/pom.xml
+++ b/pom.xml
@@ -253,10 +253,10 @@
                                             com.google.protobuf:protobuf-java:2.4.1:jar:null:compile:0c589509ec6fd86d5d2fda37e07c08538235d3b9
                                         </urn>
                                         <urn>
-                                            com.google.zxing:core:1.7:jar:null:compile:null
+                                            com.google.zxing:core:1.7:jar:null:compile:888814a387fc7570d50c4fbf4d20555d4fdd7646
                                         </urn>
                                         <urn>
-                                            com.google.zxing:javase:1.7:jar:null:compile:null
+                                            com.google.zxing:javase:1.7:jar:null:compile:dfc5d01614f5985974dbbc86ec381a4c12a43ba8
                                         </urn>
                                         <urn>
                                             com.lambdaworks:scrypt:1.3.2:jar:null:compile:b144d80b2b915a900730dd156ae749a88c0e2555
